--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -25,4 +25,5 @@
 @use "../components/RadioButton/radioButton";
 @use "../components/Checkbox/checkbox";
 @use "../components/FormError/formError";
+@use "components/toggleSwitch";
 @use "../components/Label/label";
