--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2303,25 +2303,34 @@ input[type=checkbox]:checked.qc-compact::after {
 
 .qc-switch {
   display: inline-block;
+  align-items: center;
   position: relative;
-  width: 5.6rem;
-  height: 3.2rem;
+  cursor: pointer;
 }
 .qc-switch input[type=checkbox] {
   opacity: 0;
   width: 0;
   height: 0;
+  position: absolute;
 }
-.qc-switch input[type=checkbox]:checked + .qc-switch-slider {
+
+input[type=checkbox]:checked ~ .qc-switch-slider {
   background-color: var(--qc-color-blue-regular);
 }
-.qc-switch input[type=checkbox]:checked + .qc-switch-slider::before {
+input[type=checkbox]:checked ~ .qc-switch-slider::before {
   transform: translateX(2.4rem);
 }
 
+.qc-switch-label {
+  display: inline-flex;
+}
+
 .qc-switch-slider {
-  position: absolute;
+  display: inline-flex;
+  position: relative;
   cursor: pointer;
+  width: 5.6rem;
+  height: 3.2rem;
   top: 0;
   left: 0;
   right: 0;
