Ajustement de l'attribut label + ajustement d'alignement

--- a/src/sdg/scss/components/_toggleSwitch.scss
+++ b/src/sdg/scss/components/_toggleSwitch.scss
@@ -6,7 +6,7 @@ $height: 32;
 $border: 2;
 
 .qc-switch {
-  display: inline-block;
+  display: inline-flex;
   align-items: center;
   position: relative;
   cursor: pointer;
