Ajustement de l'attribut label + ajustement d'alignement

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2302,7 +2302,7 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-switch {
-  display: inline-block;
+  display: inline-flex;
   align-items: center;
   position: relative;
   cursor: pointer;
