--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2302,7 +2302,7 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-switch {
-  display: inline-block;
+  display: inline-flex;
   align-items: center;
   position: relative;
   cursor: pointer;
