--- a/src/sdg/scss/components/_toggleSwitch.scss
+++ b/src/sdg/scss/components/_toggleSwitch.scss
@@ -7,9 +7,8 @@ $border: 2;
 
 .qc-switch {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  flex-grow: 1;
+  gap: token-value(spacer, sm);
   position: relative;
   cursor: pointer;
 
@@ -19,6 +18,11 @@ $border: 2;
     height: 0;
 
     position: absolute;
+  }
+
+  &.qc-switch-justify {
+    flex-grow: 1;
+    justify-content: space-between;
   }
 }
 
