--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2348,6 +2348,8 @@ input[type=checkbox]:checked ~ .qc-switch-slider::before {
   left: 0.2rem;
   bottom: 0.2rem;
   background-color: var(--qc-color-white);
+  border: 0.1rem solid;
+  border-color: rgba(var(--qc-color-blue-dark), 0.5);
   border-radius: 50%;
   transition: all 0.3s ease-out;
 }
