--- a/src/sdg/scss/components/_toggleSwitch.scss
+++ b/src/sdg/scss/components/_toggleSwitch.scss
@@ -56,8 +56,7 @@ input[type=checkbox]:checked ~ .qc-switch-slider {
     left: rem($border);
     bottom: rem($border);
     background-color: token-value(color, white);
-    border: rem(1) solid;
-    border-color: rgba(token-value(color, blue, dark), 0.5);
+    border: rem(1) solid rgba(token-value(color, blue, dark, rgb), 50%);
     border-radius: 50%;
     transition: all .3s ease-out;
   }
