--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -24,3 +24,4 @@
 @use "../components/RadioButton/radioButton";
 @use "../components/Checkbox/checkbox";
 @use "../components/FormError/formError";
+@use "components/button";
