Correction de dimensions aux petits formats d'ecran

--- a/src/sdg/scss/components/_toggleSwitch.scss
+++ b/src/sdg/scss/components/_toggleSwitch.scss
@@ -49,8 +49,8 @@ $border: 1;
   display: inline-flex;
   position: relative;
   cursor: pointer;
-  width: rem($width);
-  height: rem($height);
+  min-width: rem($width);
+  min-height: rem($height);
   top: 0;
   left: 0;
   right: 0;
