--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700");
 .qc-search-input, .qc-search-input button, .qc-search-bar, .qc-search-bar button {
   position: relative;
   z-index: 10;
@@ -722,6 +721,134 @@ dd {
   margin: 0;
 }
 
+/* open-sans-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../dist/fonts/open-sans-v43-latin-regular.woff2") format("woff2");
+}
+/* open-sans-italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../../dist/fonts/open-sans-v43-latin-italic.woff2") format("woff2");
+}
+/* open-sans-500 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../../dist/fonts/open-sans-v43-latin-500.woff2") format("woff2");
+}
+/* open-sans-500italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 500;
+  src: url("../../dist/fonts/open-sans-v43-latin-500italic.woff2") format("woff2");
+}
+/* open-sans-600 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../../dist/fonts/open-sans-v43-latin-600.woff2") format("woff2");
+}
+/* open-sans-600italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../../dist/fonts/open-sans-v43-latin-600italic.woff2") format("woff2");
+}
+/* open-sans-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../../dist/fonts/open-sans-v43-latin-700.woff2") format("woff2");
+}
+/* open-sans-700italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../../dist/fonts/open-sans-v43-latin-700italic.woff2") format("woff2");
+}
+/* roboto-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../dist/fonts/roboto-v48-latin-regular.woff2") format("woff2");
+}
+/* roboto-italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../../dist/fonts/roboto-v48-latin-italic.woff2") format("woff2");
+}
+/* roboto-500 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../../dist/fonts/roboto-v48-latin-500.woff2") format("woff2");
+}
+/* roboto-500italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 500;
+  src: url("../../dist/fonts/roboto-v48-latin-500italic.woff2") format("woff2");
+}
+/* roboto-600 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../../dist/fonts/roboto-v48-latin-600.woff2") format("woff2");
+}
+/* roboto-600italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../../dist/fonts/roboto-v48-latin-600italic.woff2") format("woff2");
+}
+/* roboto-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../../dist/fonts/roboto-v48-latin-700.woff2") format("woff2");
+}
+/* roboto-700italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../../dist/fonts/roboto-v48-latin-700italic.woff2") format("woff2");
+}
 .qc-shading-0 {
   border: 1px solid var(--qc-box_shadow-0-color);
 }
