--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -1,24 +1,26 @@
 @use "qc-design-tokens";
-@use "base/layout";
-@use "base/typography";
-@use "base/colors";
-@use "base/figure";
-@use "base/lists";
-@use "base/fonts";
-@use "base/shadings";
-@use "base/form";
-@use "base/accessibility";
+@use "../bases/layout/layout";
+@use "../bases/accessibility/accessibility";
+@use "../bases/colors/colors";
+@use "../bases/figures/figure";
+@use "../bases/form/form";
+@use "../bases/headings/headings";
+@use "../bases/links/links";
+@use "../bases/typography/paragraph";
+@use "../bases/lists/lists";
+@use "../bases/typography/fonts";
+@use "../bases/separator/separator";
+@use "../bases/shadings/shadings";
 @use "utilities/display";
 @use "utilities/themes";
-@use "components/icons";
-@use "components/notice";
-@use "components/pivHeader";
-@use "components/pivFooter";
-@use "components/alert";
-@use "components/toTop";
-@use "components/separator";
-@use "components/searchBar";
-@use "components/searchInput";
-@use "components/radioButton";
-@use "components/checkbox";
-@use "components/formError";
+@use "../components/Icon/icons";
+@use "../components/Notice/notice";
+@use "../components/PivHeader/pivHeader";
+@use "../components/PivFooter/pivFooter";
+@use "../components/Alert/alert";
+@use "../components/ToTop/toTop";
+@use "../components/SearchBar/searchBar";
+@use "../components/SearchInput/searchInput";
+@use "../components/RadioButton/radioButton";
+@use "../components/Checkbox/checkbox";
+@use "../components/FormError/formError";
