--- a/src/sdg/bases/shadings/_shadings.scss
+++ b/src/sdg/bases/shadings/_shadings.scss
@@ -1,4 +1,4 @@
-@use "qc-sdg-lib" as *;
+@use "../../scss/qc-sdg-lib" as *;
 @use "sass:map";
 
 @each $index,$settings in map.get($lg-tokens, box_shadow) {
