--- a/src/sdg/components/RadioButton/_radioButton.scss
+++ b/src/sdg/components/RadioButton/_radioButton.scss
@@ -1,5 +1,5 @@
-@use "qc-sdg-lib" as *;
-@use "checkRow" as *;
+@use "../../scss/qc-sdg-lib" as *;
+@use "../CheckFieldGroup/checkRow" as *;
 
 input[type=radio] {
   .qc-check-row & {
