--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2373,6 +2373,17 @@ input[type=checkbox]:checked.qc-compact::after {
   transition: all 0.3s ease-out;
 }
 
+.qc-dropdown-button {
+  display: flex;
+  background-color: var(--qc-color-background);
+  border: none;
+  padding: 0;
+}
+
+.qc-dropdown-list-items {
+  border: 0.2rem solid var(--qc-color-grey-medium);
+}
+
 .qc-container,
 .qc-container-fluid,
 .qc-container-lg,
