Correction suite à fusion de la branche radio-button dans develop

--- a/src/sdg/components/Checkbox/_checkbox.html
+++ b/src/sdg/components/Checkbox/_checkbox.html
@@ -6,7 +6,9 @@
   <form id="exemple-tos-form">
     <qc-checkbox
             id="exemple-une-case"
+            name="consentement"
             label="J’accepte les conditions d’utilisation"
+            value="oui"
             required
     ></qc-checkbox>
 
@@ -22,7 +24,12 @@
     tosForm.addEventListener("submit", (event) => {
       event.preventDefault();
       if(termsAcceptance.checked) {
-        alert("Formulaire soumis");
+        const formData = new FormData(event.target);
+        let alertParts = ["Formulaire soumis avec les données suivantees :"];
+        for (const [key, value] of formData.entries()) {
+          alertParts.push(`${key} : ${value}`);
+        };
+        alert(alertParts.join("\n"));
       } else {
         termsAcceptance.invalid = true;
       }
@@ -44,9 +51,9 @@
           name="options"
           compact
   >
-    <qc-checkbox label="Option 1"></qc-checkbox>
-    <qc-checkbox label="Option 2"></qc-checkbox>
-    <qc-checkbox label="Option 3"></qc-checkbox>
+    <qc-checkbox value="Option 1"></qc-checkbox>
+    <qc-checkbox value="Option 2"></qc-checkbox>
+    <qc-checkbox value="Option 3"></qc-checkbox>
   </qc-checkbox-group>
 </qc-doc-exemple>
 
