--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2373,15 +2373,59 @@ input[type=checkbox]:checked.qc-compact::after {
   transition: all 0.3s ease-out;
 }
 
+.qc-dropdown-list {
+  border: 0.1rem solid var(--qc-color-grey-medium);
+  width: var(--dropdown-width);
+  min-height: 4rem;
+  background-color: var(--qc-color-background);
+}
+
 .qc-dropdown-button {
   display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 4rem;
+  align-items: center;
   background-color: var(--qc-color-background);
   border: none;
-  padding: 0;
+  padding-left: var(--qc-spacer-xs);
+  padding-right: var(--qc-spacer-xs);
+  position: relative;
+  z-index: 10;
+  background: transparent;
+  border: 0;
+}
+.qc-dropdown-button::before {
+  position: absolute;
+  display: block;
+  content: "";
+  background-color: var(--qc-color-background);
+  inset: 0;
+  z-index: -5;
+}
+.qc-dropdown-button:has(input:focus), .qc-dropdown-button:focus {
+  outline: 2px solid var(--qc-color-formfield-focus-outline);
+}
+.qc-dropdown-button:has(input:focus)::before, .qc-dropdown-button:focus::before {
+  border: 2px solid var(--qc-color-formfield-focus-border);
+}
+
+.qc-dropdown-button-icon .qc-dropdown-button-icon-collapsed {
+  transform: rotate(180deg);
 }
 
 .qc-dropdown-list-items {
-  border: 0.2rem solid var(--qc-color-grey-medium);
+  max-height: 33rem;
+  overflow-y: auto;
+  scrollbar-color: var(--qc-color-blue-regular) var(--qc-color-background);
+}
+.qc-dropdown-list-items .qc-check-row {
+  height: 4rem;
+  padding-left: var(--qc-spacer-xs);
+  padding-top: var(--qc-spacer-xs);
+}
+.qc-dropdown-list-items *:hover {
+  background-color: var(--qc-color-blue-pale);
 }
 
 .qc-container,
